<resources>
    <string name="app_name">Nu Social</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_broadcast">Broadcast</string>
    <string name="menu_brag">Brag</string>

    <string name="home_second">Home Second</string>
    <string name="publish">Publish</string>
    <string name="description">Description</string>
    <string name="description_here">description here...</string>
    <string name="category_here">category here...</string>
    <string name="category">Category</string>
</resources>
