<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6f6f6f"
    tools:context="com.example.nusocial.Share_post">


    <!--    Category Text card-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/categoryView"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/category"
            android:textSize="35sp" />
    </androidx.cardview.widget.CardView>


    <!--Category Entry card-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24">

        <EditText
            android:id="@+id/editCategory"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:autofillHints="@string/category_here"
            android:hint="@string/category_here"
            android:inputType="textPersonName"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>


    <!--    Description card-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <TextView
            android:id="@+id/descriptionView"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/description"
            android:textSize="35sp" />
    </androidx.cardview.widget.CardView>


    <!--    Description entry card-->
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/description_here"
            android:inputType="textPersonName"
            android:textSize="30sp"
            android:autofillHints="@string/description_here" />
    </androidx.cardview.widget.CardView>


    <!--    Button in card-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913">

        <Button
            android:id="@+id/buttonPublish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/publish"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>